# lambda-rust-test

./: Cargo.toml  README.md
src/: error.rs  main.rs  types.rs
