[package]
name = "lambda-rust-test"
version = "0.1.0"
authors = ["Shishir Tandale <shishir95@gmail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# AWS Lambda
lambda_runtime = "0.2"
# Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging and Error Handling
log = "0.4.0"
failure = "0.1.6"
simple_logger = "1.5.0"
# Environment
dotenv = "0.15.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
